<resources>
    <string name="app_name">AndPlugble</string>
    <string name="btn_text_invoke_normal_func">执行通过加载class文件获取到的对象的普通方法</string>
    <string name="btn_text_invoke_static_func">执行通过加载class文件获取到的对象的静态方法</string>
    <string name="text_open_uninstalled_activity">打开未安装的apk中包含的activity</string>
    <string name="text_use_installed_apk_recource">使用已安装的apk中的图片资源</string>
    <string name="text_use_uninstalled_apk_resource">使用未安装的apk中的图片资源</string>
    <string name="text_use_uninstalled_apk_layoutfile">使用未安装的apk中的布局文件</string>
    <string name="text_static_proxy_eg">静态代理实例</string>
    <string name="text_dynamic_proxy_eg">动态代理实例</string>
    <string name="text_proxy_eg">代理模式实例</string>
    <string name="toast_about_to_start_a_activity">马上要打开一个activity了</string>
    <string name="toast_rom_modyfied">rom 层被修改了，我也很无奈，自己去适配额</string>
    <string name="text_open_modified_context_impl_instrumentation">通过修改ContextImpl中的instrumentation打开activity</string>
    <string name="text_open_modified_activity_instrumentation">通过修改Activity中的instrumentation打开activity</string>
    <string name="text_bind_ipc">Binder 之多进程通信</string>
    <string name="text_bind">绑定远程服务</string>
    <string name="text_unbind">解除远程服务的绑定</string>
    <string name="text_remote_compute">使用远程服务进行计算操作</string>
    <string name="toast_please_bind_service">请先绑定服务</string>
    <string name="text_hook_sys_clip_service">hook系统剪切板服务实例</string>
    <string name="hook_activitymanager">hook系统activitymanager服务实例</string>
    <string name="text_open_activity">打开一个activity</string>
    <string name="text_hook_pms">hook系统的packagemanager</string>
    <string name="text_activity_hooked">activity manager被hook了</string>
    <string name="text_pms_hooked">pms被hook了</string>
    <string name="text_start_activity_without_regis_in_am">启动一个没有在AndroidManifest文件中注册的activity</string>
    <string name="text_not_registed_act_lable">打开一个没有在androidmanifest文件中注册的activity</string>
    <string name="text_stub_activity">stubactivity</string>
    <string name="title_activity_plugin_act_handle">PluginActHandleActivity</string>
    <string name="text_opent_plug_activity">打开插件中的Activity</string>
    <string name="text_open_plug_act">打开插件中的activity</string>
</resources>
