<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.i2nexted.andplugble.ProxyPatternActivity">
    <Button
        android:id="@+id/btn_static_proxy"
        style="@style/btn_style"
        android:text="@string/text_static_proxy_eg"/>
    <Button
        android:id="@+id/btn_dynamic_proxy"
        style="@style/btn_style"
        android:text="@string/text_dynamic_proxy_eg"/>
    <Button
        android:id="@+id/btn_use_modified_insrumentation"
        style="@style/btn_style"
        android:text="@string/text_open_modified_context_impl_instrumentation"/>
    <Button
        android:id="@+id/btn_use_modified_activity_instrumentation"
        style="@style/btn_style"
        android:text="@string/text_open_modified_activity_instrumentation"/>
    <Button
        android:id="@+id/btn_aidl_eg"
        style="@style/btn_style"
        android:text="@string/text_bind_ipc"/>
    <Button
        android:id="@+id/btn_hook_sys_service"
        style="@style/btn_style"
        android:text="@string/text_hook_sys_clip_service"/>
    <Button
        android:id="@+id/btn_hook_ams"
        style="@style/btn_style"
        android:text="@string/hook_activitymanager"/>
    <Button
        android:id="@+id/btn_hook_pmg"
        style="@style/btn_style"
        android:text="@string/text_hook_pms"/>
</LinearLayout>
