<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.i2nexted.andplugble.MainActivity">

        <Button
            android:id="@+id/btn_invoke_static_func"
            style="@style/btn_style"
            android:text="@string/btn_text_invoke_static_func" />

        <Button
            android:id="@+id/btn_invoke_normal_func"
            style="@style/btn_style"
            android:text="@string/btn_text_invoke_normal_func" />

        <Button
            android:id="@+id/btn_open_uninstalled_activity"
            style="@style/btn_style"
            android:text="@string/text_open_uninstalled_activity" />

        <Button
            android:id="@+id/btn_use_installed_apk_recource"
            style="@style/btn_style"
            android:text="@string/text_use_installed_apk_recource" />

        <Button
            android:id="@+id/btn_use_uninstalled_apk_resource"
            style="@style/btn_style"
            android:text="@string/text_use_uninstalled_apk_resource" />
        <Button
            android:id="@+id/btn_use_uninstalled_apk_layoutfile"
            style="@style/btn_style"
            android:text="@string/text_use_uninstalled_apk_layoutfile" />

    </LinearLayout>
</ScrollView>
