<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.i2nexted.andplugble.IPCActivity">
    <Button
        android:id="@+id/btn_bind"
        style="@style/btn_style"
        android:text="@string/text_bind"/>
    <Button
        android:id="@+id/btn_unbind"
        style="@style/btn_style"
        android:text="@string/text_unbind"/>
    <Button
        android:id="@+id/btn_remote_compute"
        style="@style/btn_style"
        android:text="@string/text_remote_compute"/>
</LinearLayout>
